Bug 2012818 - Hide Translations settings when hidden by AI Controls r=nordzilla,desktop-theme-reviewers,hjones
Differential Revision: https://phabricator.services.mozilla.com/D280693

UltraBlame original commit: f4226bd7464cd253c508f861a2499e2232ef5144

--- a/browser/themes/shared/preferences/preferences.css
+++ b/browser/themes/shared/preferences/preferences.css
@@ -1099,6 +1099,7 @@ dialog > .sync-engines-list + hbox {
   text-overflow: ellipsis;
 }
 
+.setting-hidden,
 .visually-hidden {
   display: none !important;
 }
