--- a/toolkit/content/widgets/moz-input-common.css
+++ b/toolkit/content/widgets/moz-input-common.css
@@ -158,8 +158,8 @@
 
   /* Support link */
 
-  a[is="moz-support-link"],
-  ::slotted([slot="support-link"]) {
+  a[is="moz-support-link"]:not([hidden]),
+  ::slotted([slot="support-link"]:not([hidden])) {
     display: inline-block;
   }
 
